tests/ui/field_representing_types/incoherent-impl.old.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/incoherent-impl.rs:22:1
   |
LL | impl ForeignTrait for field_of!(Point, x) {}
   | ^^^^^^^^^^^^^^^^^^^^^^-------------------
   |                       |
   |                       `Point` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/incoherent-impl.rs:25:1
   |
LL | impl ForeignTrait for field_of!((usize, usize), 0) {}
   | ^^^^^^^^^^^^^^^^^^^^^^----------------------------
   |                       |
   |                       this is not defined in the current crate because tuples are always foreign
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
